# policyapp

./: README.md  assignment.txt  manage.py  pyproject.toml
core/: models.py  serializers.py  views.py
core/management/commands/: seed_data.py
core/migrations/: 0001_initial.py  0002_alter_policy_compliance_framework_and_more.py
policyapp/: asgi.py  settings.py  urls.py  wsgi.py
